--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,4 @@
 	ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
 	dd = diff --check --dirstat --find-copies --find-renames --histogram --color
 	sl = stash list --pretty=format:\"%C(red)%h%C(reset) - %C(dim yellow)(%C(bold magenta)%gd%C(dim yellow))%C(reset) %<(70,trunc)%s %C(green)(%cr) %C(bold blue)<%an>%C(reset)\"
+    discard = !git stash save --keep-index --include-untracked && git stash drop
