--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -1,7 +1,7 @@
 [pull]
 	rebase = true
 [user]
-	name = Manoj Karthick Selva Kumar
+	name = Manoj Karthick
 	email = manojkarthick@ymail.com
 [alias]
 	unstage = reset HEAD --
