--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,7 @@
     ~/.antibody/.zsh_plugins.txt: zsh/antibody/.zsh_plugins.txt
     ~/bin/antibody-bundle: zsh/antibody/antibody-bundle
     ~/.config/nixpkgs/home.nix: nix/home.nix
+    ~/.config/starship.toml: config/starship/starship.toml
 
 - create:
     - ~/code
