--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -27,8 +27,9 @@ cask "intel-power-gadget"
 cask "intellij-idea"
 cask "iterm2"
 cask "monitorcontrol"
+cask "mullvadvpn"
 cask "slack"
 cask "spectacle"
 cask "spotify"
+cask "textmate"
 cask "virtualbox"
-cask "visual-studio-code"
