--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,7 +1,9 @@
 tap "beeftornado/rmtree"
+tap "cookiecoder15/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "manojkarthick/reddsaver"
 brew "gettext"
 brew "direnv"
 brew "fzf"
@@ -21,6 +23,7 @@ brew "python@3.8"
 brew "smartmontools"
 brew "tfenv"
 cask "1password"
+cask "balenaetcher"
 cask "docker"
 cask "google-chrome"
 cask "intel-power-gadget"
@@ -28,6 +31,7 @@ cask "intellij-idea"
 cask "iterm2"
 cask "monitorcontrol"
 cask "mullvadvpn"
+cask "rectangle"
 cask "slack"
 cask "spectacle"
 cask "spotify"
