Replace reference to relocated tap

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,8 +1,8 @@
 tap "beeftornado/rmtree"
-tap "cookiecoder15/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "lhvy/tap"
 tap "manojkarthick/reddsaver"
 brew "gettext"
 brew "direnv"
