--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -1,6 +1,11 @@
 [kubernetes]
-disabled = true
-format = '[⛵ $context \($namespace\)](dimmed green) '
+symbol = "ﴱ"
+format = '[$symbol $context \($namespace\)](dimmed green) '
+disabled = false
+
+[kubernetes.context_aliases]
+gke_kubernetes-the-hard-way-284919_us-west1-b_burrito = 'burrito'
+k3d-taco = 'taco'
 
 [gcloud]
 disabled = true
@@ -12,7 +17,73 @@ disabled = false
 disabled = true
 
 [aws]
-disabled = true
+symbol = "  "
 
-[k8s]
-disabled = true
+[conda]
+symbol = " "
+
+[dart]
+symbol = " "
+
+[directory]
+read_only = " "
+
+[docker_context]
+symbol = " "
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[git_branch]
+symbol = " "
+
+[golang]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[memory_usage]
+symbol = " "
+
+[nim]
+symbol = " "
+
+[nix_shell]
+symbol = " "
+
+[package]
+symbol = " "
+
+[perl]
+symbol = " "
+
+[php]
+symbol = " "
+
+[python]
+symbol = " "
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = " "
+
+[scala]
+symbol = " "
+
+[shlvl]
+symbol = " "
+
+[swift]
+symbol = "ﯣ "
