--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -1,7 +1,7 @@
 [kubernetes]
-symbol = "ﴱ"
+symbol = 'ﴱ'
 format = '[$symbol $context \($namespace\)](dimmed green) '
-disabled = false
+disabled = true
 
 [kubernetes.context_aliases]
 gke_kubernetes-the-hard-way-284919_us-west1-b_burrito = 'burrito'
@@ -11,79 +11,82 @@ k3d-taco = 'taco'
 disabled = true
 
 [git_status]
-disabled = false
+disabled = true
 
 [battery]
 disabled = true
 
 [aws]
-symbol = "  "
+symbol = '  '
 
 [conda]
-symbol = " "
+symbol = ' '
 
 [dart]
-symbol = " "
+symbol = ' '
 
 [directory]
-read_only = " "
+read_only = ' '
 
 [docker_context]
-symbol = " "
+symbol = ' '
 
 [elixir]
-symbol = " "
+symbol = ' '
 
 [elm]
-symbol = " "
+symbol = ' '
 
 [git_branch]
-symbol = " "
+symbol = ' '
 
 [golang]
-symbol = " "
+symbol = ' '
 
 [hg_branch]
-symbol = " "
+symbol = ' '
 
 [java]
-symbol = " "
+symbol = ' '
 
 [julia]
-symbol = " "
+symbol = ' '
 
 [memory_usage]
-symbol = " "
+symbol = ' '
 
 [nim]
-symbol = " "
+symbol = ' '
 
 [nix_shell]
-symbol = " "
+symbol = ' '
 
 [package]
-symbol = " "
+symbol = ' '
 
 [perl]
-symbol = " "
+symbol = ' '
 
 [php]
-symbol = " "
+symbol = ' '
 
 [python]
-symbol = " "
+symbol = ' '
 
 [ruby]
-symbol = " "
+symbol = ' '
 
 [rust]
-symbol = " "
+symbol = ' '
 
 [scala]
-symbol = " "
+symbol = ' '
 
 [shlvl]
-symbol = " "
+symbol = ' '
 
 [swift]
-symbol = "ﯣ "
+symbol = 'ﯣ '
+
+[k8s]
+disabled = true
