--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,4 +29,18 @@
 		defaultBranch = master
 [core]
 		excludesFile = ~/.gitignore_global
-		pager = delta
+
+[include]
+		path = ~/.config/delta/themes.gitconfig
+
+[pager]
+		diff = delta
+		reflog = delta
+		show = delta
+
+[interactive]
+		diffFilter = delta --color-only
+
+[delta]
+		features = calochortus-lyallii
+
