Updated brewfile after partial macports migration

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,34 +1,39 @@
 tap "beeftornado/rmtree"
+tap "cookiecoder15/tap"
+tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 tap "homebrew/core"
-tap "lhvy/tap"
+tap "manojkarthick/pqrs"
 tap "manojkarthick/reddsaver"
+tap "teamookla/speedtest"
+tap "yoannfleurydev/gitweb"
+brew "automake"
 brew "gettext"
-brew "direnv"
-brew "fzf"
+brew "diff-so-fancy"
 brew "gdbm"
 brew "readline"
-brew "sqlite"
 brew "xz"
-brew "glib", link: false
+brew "glib"
 brew "gnu-getopt"
 brew "goenv", args: ["HEAD"]
-brew "k3d"
 brew "ruby"
 brew "libstfl"
-brew "parquet-tools"
 brew "pyenv"
 brew "python@3.8"
-brew "smartmontools"
 brew "tfenv"
+brew "teamookla/speedtest/speedtest"
 cask "1password"
 cask "balenaetcher"
 cask "docker"
+cask "font-jetbrains-mono-nerd-font"
+cask "font-space-mono-nerd-font"
 cask "google-chrome"
 cask "intel-power-gadget"
 cask "intellij-idea"
 cask "iterm2"
+cask "marta"
 cask "monitorcontrol"
 cask "mullvadvpn"
 cask "rectangle"
@@ -36,4 +41,6 @@ cask "slack"
 cask "spectacle"
 cask "spotify"
 cask "textmate"
+cask "vagrant"
+cask "vagrant-vmware-utility"
 cask "virtualbox"
