Migrated remaining packages except expenses to homebrew

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,6 +1,7 @@
 tap "beeftornado/rmtree"
 tap "cookiecoder15/tap"
 tap "hashicorp/tap"
+tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
@@ -20,9 +21,12 @@ brew "gnu-getopt"
 brew "goenv", args: ["HEAD"]
 brew "ruby"
 brew "libstfl"
+brew "netlify-cli"
 brew "pyenv"
 brew "python@3.8"
+brew "terraform_landscape"
 brew "tfenv"
+brew "heroku/brew/heroku"
 brew "teamookla/speedtest/speedtest"
 cask "1password"
 cask "balenaetcher"
