Add maccy and logitech-options as homebrew casks

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -2,6 +2,7 @@ tap "hashicorp/tap"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "manojkarthick/pqrs"
@@ -31,6 +32,8 @@ cask "google-chrome"
 cask "intel-power-gadget"
 cask "intellij-idea"
 cask "iterm2"
+cask "logitech-options"
+cask "maccy"
 cask "marta"
 cask "monitorcontrol"
 cask "mullvadvpn"
