Install Boop mac app

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -25,6 +25,7 @@ brew "tfenv"
 brew "heroku/brew/heroku"
 cask "1password"
 cask "balenaetcher"
+cask "boop"
 cask "docker"
 cask "font-jetbrains-mono-nerd-font"
 cask "font-space-mono-nerd-font"
