--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -7,9 +7,12 @@ tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "manojkarthick/pqrs"
 tap "manojkarthick/reddsaver"
+brew "gdbm"
 brew "gnu-getopt"
 brew "netlify-cli"
+brew "readline"
 brew "pyenv"
+brew "ruby"
 brew "terraform_landscape"
 brew "tfenv"
 brew "heroku/brew/heroku"
